server/k8s/products-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - image: dripstore/dripstore-products
        name: products

---

apiVersion: v1
kind: Service
metadata:
  name: products-srv
spec:
  selector:
    app: products
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
