server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: dripstore.com
      http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3001

          - path: /api/products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: products-srv
                port:
                  number: 3002

          - path: /(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
